--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
                </div>
                <div class="menu">
                   <ul>
-                     <li><a href="Home.html">HOME</a></li>
+                     <li><a href="index.html">HOME</a></li>
                      <li><a href="About.html">ABOUT</a></li>
                      <li><a href="Contact.html">CONTACT</a></li>
                   </ul>
